# Stm32-F103-C8T6-Std-Peripheral-Lib-Template-On-Mac-Apple-Silicon

./: .gitignore  CMakeLists.txt  arm-none-eabi-toolchain.cmake  f1flow  f1flow.sh  readme.md
inc/driver/: stm32f10x.h
inc/user/: stm32f10x_conf.h
src/system/: core_cm3.c
src/user/: main.c
